--- a/visualize/DataMatrixGuiXYProbe.glade
+++ b/visualize/DataMatrixGuiXYProbe.glade
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <glade-interface>
+  <!-- interface-requires gnome 0.0 -->
+  <!-- interface-requires gnome 0.0 -->
+  <!-- interface-requires bonobo 0.0 -->
+  <!-- interface-requires bonobo 0.0 -->
   <!-- interface-requires gtk+ 2.16 -->
-  <!-- interface-requires gnome 0.0 -->
-  <!-- interface-requires gnome 0.0 -->
-  <!-- interface-requires bonobo 0.0 -->
-  <!-- interface-requires bonobo 0.0 -->
   <!-- interface-naming-policy toplevel-contextual -->
   <requires lib="bonobo"/>
   <requires lib="gnome"/>
@@ -281,7 +281,53 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox2_scatter">
+                  <widget class="GtkHBox" id="hbox4_title">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <widget class="GtkLabel" id="label2">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Plot Title: </property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkEntry" id="entry_plot_title">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="primary_icon_activatable">False</property>
+                        <property name="secondary_icon_activatable">False</property>
+                        <property name="primary_icon_sensitive">True</property>
+                        <property name="secondary_icon_sensitive">True</property>
+                        <signal name="insert_at_cursor" handler="on_entry_plot_title_change" swapped="no"/>
+                        <signal name="delete_from_cursor" handler="on_entry_plot_title_change" swapped="no"/>
+                        <signal name="paste_clipboard" handler="on_entry_plot_title_change" swapped="no"/>
+                        <signal name="cut_clipboard" handler="on_entry_plot_title_change" swapped="no"/>
+                        <signal name="backspace" handler="on_entry_plot_title_change" swapped="no"/>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkHBox" id="hbox_scatter">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -339,11 +385,55 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox5_errorbar">
+                  <widget class="GtkHBox" id="hbox_logScatter">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbutton_logX">
+                        <property name="label" translatable="yes">logX</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbutton_logY">
+                        <property name="label" translatable="yes">logY</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">4</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkHBox" id="hbox_errorbar">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -406,11 +496,11 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">3</property>
+                    <property name="position">5</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox1_histogram">
+                  <widget class="GtkHBox" id="hbox_histogram">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -481,60 +571,49 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">4</property>
+                    <property name="position">6</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox4_title">
+                  <widget class="GtkHBox" id="hbox_logHist">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <widget class="GtkLabel" id="label2">
+                      <widget class="GtkCheckButton" id="checkbutton_histLogX">
+                        <property name="label" translatable="yes">hist LogX</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Plot Title: </property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
                       </widget>
                       <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
                         <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkEntry" id="entry_plot_title">
+                      <widget class="GtkCheckButton" id="checkbutton_histLogY">
+                        <property name="label" translatable="yes">hist logY</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="primary_icon_activatable">False</property>
-                        <property name="secondary_icon_activatable">False</property>
-                        <property name="primary_icon_sensitive">True</property>
-                        <property name="secondary_icon_sensitive">True</property>
-                        <signal name="insert_at_cursor" handler="on_entry_plot_title_change" swapped="no"/>
-                        <signal name="delete_from_cursor" handler="on_entry_plot_title_change" swapped="no"/>
-                        <signal name="paste_clipboard" handler="on_entry_plot_title_change" swapped="no"/>
-                        <signal name="cut_clipboard" handler="on_entry_plot_title_change" swapped="no"/>
-                        <signal name="backspace" handler="on_entry_plot_title_change" swapped="no"/>
+                        <property name="receives_default">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="draw_indicator">True</property>
                       </widget>
                       <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
                         <property name="position">1</property>
                       </packing>
-                    </child>
-                    <child>
-                      <placeholder/>
                     </child>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">5</property>
+                    <property name="fill">True</property>
+                    <property name="position">7</property>
                   </packing>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
                 </child>
               </widget>
               <packing>
