--- a/visualize/DataMatrixGuiXYProbe.glade
+++ b/visualize/DataMatrixGuiXYProbe.glade
@@ -545,7 +545,7 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="tooltip" translatable="yes">Make an XY scatter plot. Selected rows will be highlighted as red dots</property>
+                        <property name="tooltip" translatable="yes">Make an XY scatter plot. Selected rows will be highlighted as red dots. pValue is from Wilcoxon signed rank test (non-parametric pairwise t-test), NOT pValue for correlation.</property>
                         <property name="use_action_appearance">False</property>
                         <signal name="clicked" handler="on_button_highlight_clicked" swapped="no"/>
                       </widget>
